[package]
name = "yew-unocss-transformer"
version = "0.0.2"
edition = "2021"
description = "Yew classes macro with variant group transformer for UnoCSS"
repository = "https://github.com/brofrain/yew-unocss-transformer"
homepage = "https://github.com/brofrain/yew-unocss-transformer"
license = "MIT"
keywords = ["yew", "unocss"]

[dependencies]
yew = "0.19.3"
once_cell = "1.14.0"
proc-macro2 = "1.0.43"
quote = "1.0.21"
regex = "1.6.0"
syn = "1.0.99"

[lib]
proc-macro = true
